--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "mpvue": "^2.0.0",
-    "yarn": "^1.21.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
